force-app/main/default/objects/Share_Transfer__c/Share_Transfer__c.object-meta.xml
<CustomObject>
    <description>Tracks secondary-market transfers of investment units between a transferor Investment position and a transferee Account for the DPEG Investor Relations app. Captures transfer units, amount, approval workflow status and type. Field history is tracked on state-change and financial fields.</description>
    <label>Share Transfer</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Share Transfer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Share Transfers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>