force-app/main/default/objects/Share_Transfer__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transferor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Share Transfers</relationshipLabel>
    <relationshipName>Share_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>