force-app/main/default/objects/Share_Transfer__c/fields/Investment__c.field-meta.xml
<CustomField>
    <fullName>Investment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment</label>
    <referenceTo>Investment__c</referenceTo>
    <relationshipLabel>Share Transfers (Investment)</relationshipLabel>
    <relationshipName>Share_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>