force-app/main/default/objects/Share_Transfer__c/fields/Offering_Name__c.field-meta.xml
<CustomField>
    <fullName>Offering_Name__c</fullName>
    <label>Offering Name</label>
    <description>Name of the offering tied to the transferor investment, surfaced for quick reference on the transfer record.</description>
    <inlineHelpText>Read-only. Offering name derived from the transferor investment.</inlineHelpText>
    <type>Text</type>
    <formula><![CDATA[Transferor_Investment__r.Offering__r.Name]]></formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
</CustomField>