force-app/main/default/objects/Share_Transfer__c/fields/Share_To_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Share_To_Transfer__c</fullName>
    <label>Share To Transfer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>