force-app/main/default/objects/Share_Transfer__c/fields/Transfer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Amount__c</fullName>
    <description>Monetary value of the units being transferred. Sensitive financial field with restricted field-level security.</description>
    <inlineHelpText>Enter the total transfer value in USD.</inlineHelpText>
    <label>Sale Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>