force-app/main/default/objects/Share_Transfer__c/fields/Transfer_Amount_c__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Amount_c__c</fullName>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>