force-app/main/default/objects/Share_Transfer__c/fields/Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Date__c</fullName>
    <description>Effective date the unit transfer takes place.</description>
    <inlineHelpText>The effective date of the transfer.</inlineHelpText>
    <label>Transfer Date</label>
    <type>Date</type>
</CustomField>