force-app/main/default/objects/Share_Transfer__c/fields/Transfer_Type__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Type__c</fullName>
    <description>Indicates whether the transfer moves part or all of the transferor&apos;s position.</description>
    <inlineHelpText>Partial transfers move some units; Full transfers move the entire position.</inlineHelpText>
    <label>Transfer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partial</fullName>
                <default>true</default>
                <label>Partial</label>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>