force-app/main/default/objects/Share_Transfer__c/fields/Transferee_Account__c.field-meta.xml
<CustomField>
    <fullName>Transferee_Account__c</fullName>
    <label>Transferee Account</label>
    <description>The receiving Account (investing entity) to which units are being transferred (the buyer).</description>
    <inlineHelpText>Select the Account that will receive the transferred units.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inbound Transfers</relationshipLabel>
    <relationshipName>Inbound_Transfers</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>