force-app/main/default/objects/Share_Transfer__c/fields/Transferee_c__c.field-meta.xml
<CustomField>
    <fullName>Transferee_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transferee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Share Transfers (Transferee__c)</relationshipLabel>
    <relationshipName>Share_Transfers1</relationshipName>
    <type>Lookup</type>
</CustomField>