force-app/main/default/objects/Share_Transfer__c/fields/Transferee_Entity__c.field-meta.xml
<CustomField>
    <fullName>Transferee_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer From</label>
    <referenceTo>Investing_Entity__c</referenceTo>
    <relationshipLabel>Share Transfers</relationshipLabel>
    <relationshipName>Share_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>