force-app/main/default/objects/Share_Transfer__c/fields/Transferor_Entity__c.field-meta.xml
<CustomField>
    <fullName>Transferor_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer To</label>
    <referenceTo>Investing_Entity__c</referenceTo>
    <relationshipLabel>Share Transfers (Transferor Entity)</relationshipLabel>
    <relationshipName>Share_Transfers1</relationshipName>
    <type>Lookup</type>
</CustomField>