force-app/main/default/objects/Share_Transfer__c/fields/Transferor_Investment__c.field-meta.xml
<CustomField>
    <fullName>Transferor_Investment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The investment position from which units are being transferred (the seller&apos;s position).</description>
    <inlineHelpText>Select the investment whose units are being transferred out.</inlineHelpText>
    <label>Source Investment</label>
    <referenceTo>Investment__c</referenceTo>
    <relationshipLabel>Outbound Transfers</relationshipLabel>
    <relationshipName>Outbound_Transfers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>