force-app/main/default/objects/Share_Transfer__c/fields/Units_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Units_Transferred__c</fullName>
    <description>Number of investment units being transferred from the transferor to the transferee.</description>
    <inlineHelpText>Enter the number of units to transfer.</inlineHelpText>
    <label>Units Transferred</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>