force-app/main/default/objects/Share_Transfer__c/validationRules/Units_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Units_Not_Negative</fullName>
    <active>true</active>
    <description>Prevents Units Transferred from being set to a negative value. Factory-safe: zero and blank are permitted; only negative values (less than 0) trigger the error.</description>
    <errorConditionFormula>Units_Transferred__c &lt; 0</errorConditionFormula>
    <errorMessage>Units Transferred cannot be negative.</errorMessage>
</ValidationRule>