force-app/main/default/objects/Share_Transfer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Investment__c</columns>
    <columns>Share_To_Transfer__c</columns>
    <columns>Transferee_Entity__c</columns>
    <columns>Transferor_Entity__c</columns>
    <columns>Transfer_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>