force-app/main/default/objects/Share_Transfer__c/listViews/Pending_IR_Approval.listView-meta.xml
<ListView>
    <fullName>Pending_IR_Approval</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Pending IR Approval</label>
</ListView>